FM-8 Publish Standalone Release of Current FeatureModel
git-svn-id: https://svnserver.informatik.kit.edu/i43/svn/code/FeatureModel/Core/trunk@14328 769cc9a0-fb0c-0410-8c2f-a2305f0e6268

--- a/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
+++ b/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
@@ -2,3 +2,6 @@ bin.includes = feature.xml
 category.id.featuremodel=Palladio Feature Model
 category.members.featuremodel=de.uka.ipd.sdq.featuremodel.feature.model,de.uka.ipd.sdq.featuremodel.feature.config
 category.description.featuremodel=Ecore-based feature model with separation of the feature model itself and a specific configuration.
+category.id.featuremodeladdon=Palladio Feature Model Addons
+category.members.featuremodeladdon=de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor
+category.description.featuremodeladdon=Addons for the palladio feature model 
