Palladio FeatureModel Release 1.1
git-svn-id: https://svnserver.informatik.kit.edu/i43/svn/code/FeatureModel/Core/trunk@16358 769cc9a0-fb0c-0410-8c2f-a2305f0e6268

--- a/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
+++ b/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
@@ -5,3 +5,6 @@ category.description.featuremodel=Ecore-based feature model with separation of t
 category.id.featuremodeladdon=Palladio Feature Model Addons
 category.members.featuremodeladdon=de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor
 category.description.featuremodeladdon=Addons for the palladio feature model 
+category.id.featuremodelsrc=Palladio Feature Model - Source
+category.members.featuremodelsrc=de.uka.ipd.sdq.featuremodel.feature.model.source,de.uka.ipd.sdq.featuremodel.feature.config.source,de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor.source
+category.description.featuremodelsrc=Palladio Feature Model - Source
