--- a/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
+++ b/de.uka.ipd.sdq.featuremodel.buckminster/build.properties
@@ -1,10 +1,7 @@
 bin.includes = feature.xml
-category.id.featuremodel=Palladio Feature Model
-category.members.featuremodel=de.uka.ipd.sdq.featuremodel.feature.model,de.uka.ipd.sdq.featuremodel.feature.config
-category.description.featuremodel=Ecore-based feature model with separation of the feature model itself and a specific configuration.
-category.id.featuremodeladdon=Palladio Feature Model Addons
-category.members.featuremodeladdon=de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor
-category.description.featuremodeladdon=Addons for the palladio feature model 
-category.id.featuremodelsrc=Palladio Feature Model - Source
-category.members.featuremodelsrc=de.uka.ipd.sdq.featuremodel.feature.model.source,de.uka.ipd.sdq.featuremodel.feature.config.source,de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor.source
-category.description.featuremodelsrc=Palladio Feature Model - Source
+category.id.org.palladiosimulator.support.category=Palladio Supporting Features
+category.description.org.palladiosimulator.support.category=Features that support the Palladio Bench tooling, but also could be used independently
+category.id.org.palladiosimulator.support.source.category=Palladio Supporting Features Source
+category.description.org.palladiosimulator.support.source.category=Source code of the features that support the Palladio Bench tooling, but also could be used independently
+category.members.org.palladiosimulator.support.category=de.uka.ipd.sdq.featuremodel.feature.model,de.uka.ipd.sdq.featuremodel.feature.config,de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor
+category.members.org.palladiosimulator.support.source.category=de.uka.ipd.sdq.featuremodel.feature.model.source,de.uka.ipd.sdq.featuremodel.feature.config.source,de.uka.ipd.sdq.featuremodel.feature.featureinstanceeditor.source
