--- a/de.uka.ipd.sdq.featuremodel/plugin.xml
+++ b/de.uka.ipd.sdq.featuremodel/plugin.xml
@@ -14,7 +14,7 @@
     <package 
        uri = "http://sdq.ipd.uka.de/FeatureModel/3.0" 
        class = "de.uka.ipd.sdq.featuremodel.featuremodelPackage"
-       genModel = "model/FeatureModel.genmodel" /> 
+       genModel = "model/featuremodel.genmodel" /> 
   </extension>
 
    <extension point="org.eclipse.emf.ecore.extension_parser">
